--- a/P3/Practica3.ipynb
+++ b/P3/Practica3.ipynb
@@ -2,19 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import random\n",
+    "import math\n",
+    "import hashlib\n",
+    "import copy\n",
     "import sympy\n",
-    "import math"
+    "import random\n",
+    "import time\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class block:\n",
+    "    def __init__(self):\n",
+    "        self.block_hash = 0\n",
+    "        self.previous_block_hash = 0\n",
+    "        self.transaction = transaction(150, rsa_key())\n",
+    "        self.seed = 12\n",
+    "    \n",
+    "    def genesis(self, transaction):\n",
+    "        self.transaction = transaction\n",
+    "        self.previous_block_hash = 0\n",
+    "        self.getBlockHash(transaction)\n",
+    "\n",
+    "    def next_block(self, transaction):\n",
+    "        self.transaction = transaction\n",
+    "        self.previous_block_hash = self.block_hash\n",
+    "        self.getBlockHash(transaction)\n",
+    "    \n",
+    "    def verify_block(self):\n",
+    "        prevCheck = self.previous_block_hash < 2**(256-d)\n",
+    "        transCheck = self.transaction.verify()\n",
+    "        currCheck = self.block_hash < 2**(256-d) and self.getHash(self.seed, self.transaction) == self.block_hash\n",
+    "        return prevCheck and transCheck and currCheck\n",
+    "    \n",
+    "    def getBlockHash(self, transaction):\n",
+    "        seed = 0\n",
+    "        h = self.getHash(seed, transaction)\n",
+    "        while h >= 2**(256-d):\n",
+    "            seed = seed + 1\n",
+    "            h = self.getHash(seed, transaction)\n",
+    "        self.seed = seed\n",
+    "        self.block_hash = h\n",
+    "\n",
+    "    def getHash(self, seed, transaction):\n",
+    "        e = str(self.previous_block_hash)\n",
+    "        e += str(self.transaction.public_key.publicExponent)\n",
+    "        e += str(self.transaction.public_key.modulus)\n",
+    "        e += str(self.transaction.message)\n",
+    "        e += str(self.transaction.signature)\n",
+    "        e += str(seed)\n",
+    "        return int(hashlib.sha256(e.encode()).hexdigest(), 16)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class rsa_public_key:\n",
+    "    def __init__(self, rsa_key):\n",
+    "        self.publicExponent = rsa_key.publicExponent\n",
+    "        self.modulus = rsa_key.modulus\n",
+    "\n",
+    "    def verify(self, message, signature):\n",
+    "        return pow(signature,self.publicExponent,self.modulus) == message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class block_chain:\n",
+    "    def __init__(self, transaction):\n",
+    "        b = block()\n",
+    "        b.genesis(transaction)\n",
+    "        self.list_of_blocks = [b]\n",
+    "        \n",
+    "\n",
+    "    def add_block(self, transaction): \n",
+    "        newBlock = copy.deepcopy(self.list_of_blocks[-1])\n",
+    "        newBlock.next_block(transaction)\n",
+    "        self.list_of_blocks.append(newBlock)\n",
+    "    \n",
+    "    def verify(self):\n",
+    "        if self.list_of_blocks[0].previous_block_hash != 0:\n",
+    "            return False\n",
+    "        for i in range(len(self.list_of_blocks)):\n",
+    "            if (not self.list_of_blocks[i].verify_block()):\n",
+    "                return False\n",
+    "            if i > 0 and self.list_of_blocks[i].previous_block_hash != self.list_of_blocks[i-1].block_hash:\n",
+    "                return False\n",
+    "        return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class transaction:\n",
+    "    def __init__(self, message, RSAkey):\n",
+    "        self.public_key = rsa_public_key(RSAkey)\n",
+    "        self.message = message\n",
+    "        self.signature = RSAkey.sign(message)\n",
+    "    \n",
+    "    def verify(self):\n",
+    "        return self.public_key.verify(self.message, self.signature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +187,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meanTimes = {}\n",
+    "meanSlowTimes = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -92,8 +213,6 @@
    ],
    "source": [
     "## DISCLAIMER: Ejecutar el siguiente código puede tardar mucho tiempo. (12 mins aprox)\n",
-    "meanTimes = {}\n",
-    "meanSlowTimes = {}\n",
     "for bits in [512, 1024, 2048, 4096]:\n",
     "    print(bits)\n",
     "    a = rsa_key(bits_modulo=bits)\n",
