--- a/P4/CurvasElipticas.ipynb
+++ b/P4/CurvasElipticas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,19 +26,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "p = 115792089210356248762697446949407573530086143415290314195533631308867097853951\n",
     "n = 115792089210356248762697446949407573529996955224135760342422259061068512044369\n",
+    "q = n\n",
+    "b = int(\"5ac635d8aa3a93e7b3ebbd55769886bc651d06b0cc53b0f63bce3c3e27d2604b\", 16)\n",
     "Gx = int(\"6b17d1f2e12c4247f8bce6e563a440f277037d812deb33a0f4a13945d898c296\", 16)\n",
     "Gy = int(\"4fe342e2fe1a7f9b8ee7eb4a7c0f9e162bce33576b315ececbb6406837bf51f5\", 16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = Qy ** 2\n",
+    "r2 = Qx ** 3 - 3 * Qx + b\n",
+    "r % p == r2 % p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,19 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(Q * q).is_infinity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./files/signature.txt') as f:\n",
     "    signature = f.read()\n",
-    "f1 = signature[8:74]\n",
-    "f2 = signature[78:]"
+    "f1 = int(signature[8:74], 16)\n",
+    "f2 = int(signature[78:], 16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,48 +114,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./files/mensaje.bin', 'rb') as f:\n",
-    "    message = f.read().hex().encode()\n",
-    "    message2 = \"807dae9f518cd960e89d64223461d4bb6bd1e94623954e8f433a616123815d7c6b852a981182059aa36c7847f8a26405\"\n",
+    "    message = f.read()\n",
+    "    # message2 = \"807dae9f518cd960e89d64223461d4bb6bd1e94623954e8f433a616123815d7c6b852a981182059aa36c7847f8a26405\"\n",
     "    h = hashlib.sha384(message).hexdigest()\n",
-    "    m2 = hashlib.sha256((pre + message2).encode()).hexdigest()\n",
-    "    m = hashlib.sha256((pre + h).encode()).hexdigest()"
+    "    m = int(hashlib.sha256(bytes(bytearray.fromhex(pre + h))).hexdigest(), 16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
-    "f2i = sympy.mod_inverse(int(f2, 16), n)\n",
-    "w1 = (int(m, 16) * f2i) % n\n",
-    "w11 = (int(m2, 16) * f2i) % n\n",
-    "w2 = (int(f1, 16) * f2i) % n\n",
+    "f2i = sympy.mod_inverse(f2, n)\n",
+    "w1 = (m * f2i) % n\n",
+    "w2 = (f1 * f2i) % n\n",
     "\n",
-    "E = w1 * P + w2 * Q\n",
-    "E2 = w11 * P + w2 * Q\n",
-    "print((E.x % n) == f1) \n",
-    "print((E2.x% n) == f1) \n"
+    "E = (w1 * P) + (w2 * Q)\n",
+    "print((E.x % n) == f1) \n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -125,12 +164,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7d6993cb2f9ce9a59d5d7380609d9cb5192a9dedd2735a011418ad9e827eb538"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
